# bookmark-navigation

./: .gitignore  AGENTS.md  BOOKMARK_RULES.md  README.md  README_FIRST.md  SECURITY.md  bookmark_audit.py  bookmark_numbering.py  bookmark_organizer.py  bookmark_policy.json
.github/workflows/: ci.yml
navigation/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml
navigation/backend/: .gitignore  alembic.ini  pyproject.toml
navigation/backend/alembic/: env.py
navigation/backend/alembic/versions/: 0001_initial.py  0002_bookmark_notes.py  0003_import_preview.py  0004_netscape_attrs.py  0005_backup_protection.py  0006_import_empty_folders.py  0007_multi_user.py
navigation/backend/app/: __init__.py  backup_service.py  bookmark_domain.py  bookmark_service.py  config.py  db.py  dependencies.py  export_service.py  import_service.py  main.py  models.py  schemas.py  security.py
navigation/backend/app/routers/: admin.py  auth.py  backups.py  bookmarks.py  exports.py  folders.py  imports.py
navigation/backend/tests/: test_auth.py  test_bookmark_api.py  test_bookmark_domain.py  test_deployment_docs.py  test_export_backup.py  test_health.py  test_imports.py  test_markdown_links.py  test_migrations.py  test_models.py  test_multi_user.py  test_offline_installer.py  test_real_v5_import.py
navigation/deploy/: navigation-ops.sh  nginx.conf.example
navigation/docs/: acceptance-2026-07-13.md  linux-server-deployment-2026-07-14.md  offline-amd64-installer-design-2026-07-14.md  offline-amd64-installer-implementation-plan-2026-07-14.md
(+51 files in other folders)
