[project]
name = "bookmark-navigation-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "argon2-cffi>=23.1,<26",
    "fastapi>=0.115,<0.116",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1", "pytest>=8,<10"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
